--- a/player.html
+++ b/player.html
@@ -25,17 +25,13 @@ body {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 100%;
 }
 
 nav {
   background-color: #000000;
-  width: 100%;
   height: 40px;
-  flex-grow: 0;
 }
 
 .menu {
@@ -56,7 +52,13 @@ i {
 
 webview {
   width: 100%;
-  flex-grow: 1;
+  height: 500px;
+}
+
+webview:shadow object {
+  height: 100%;
+  width: 100%;
+  outline: 0;
 }
 
   </style>
